--- a/vue-components/package.json
+++ b/vue-components/package.json
@@ -11,9 +11,9 @@
     "vue-async-computed": "^3.3.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
+    "@vue/cli-service": "^3.0.0-rc.3",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
